_sass/_trails.scss
.trails {
	font-family: $sans;
	section {
		@include outer-container;
		@include clearfix;
		padding: $space * 1/2;
		//@include media($tablet) {
		//	padding: 0 80px;
		//}
	}	
	.hero-info {
		float: none;
		margin: 0;
	}
	#hero-info-logo {
		float: none;
		margin: auto;
		text-align: center;
		@include size(24em 24em);
		img {
			@include size(24em 24em);
			margin: auto;
			text-align: center;
		}
		@include media($mobile) {
			display: none;
		}
	}
	#hero-info-badge {
		display: none;
		@include media($mobile) {
			float: none;
			margin: auto;
			display: block;
			text-align: center;
			@include size(24em 24em);
			img {
				@include size(24em 24em);
				margin: auto;
			}
		}
	}
	.hero-text {
		display: block;
	}
	.trails-navigation {
		font-family: $slab;
		margin-top: $space;
		text-align: center;
		.trail-flag {
			display: inline-block;
			width: 9em;
			margin: 2em;
		}
		img {
				width: 9em;
		}
		@include media($mobile) {
			display: none;
		}

	}
	p {
		line-height: 2;
		max-width: 80%;
		margin: auto;
		color: $brown;
	} 

	h1 {
		color: $dark-blue;
		@include media($mobile) {
			font-size: 3.5em;
		}
	}

	h2 {
		margin-bottom: $space * 2;
		margin-top: $space * 2;
		color: $dark-blue;
	}

	h3 {
	}
	h4 {
		font-family: $sans;
		color: $brown;
	}
	ol {
		font-family: $sans;
		color: $brown;
		p {
			font-family: $sans;
			max-width: 100%;
			// font-size: .65em;
			font-size: .7em;
		}
		text-align: left;
		list-style: decimal;
		max-width: 80%;
		padding: 0 $space * 1/4;
		margin: $space * 2 auto;
		li {
			padding-bottom: 1em;
		}
	}	
	ul {
		margin-left: $space;
		margin-top: 1em;
		list-style: square;
		line-height: 1.6666666;
		p {
			line-height: 1.666666;
			// margin-left: 1em;
		}
	}
}
footer{
	font-family: $slab;
}

